--- a/medianfilterdialog.ui
+++ b/medianfilterdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SpacialFilterCernelInput</class>
- <widget class="QDialog" name="SpacialFilterCernelInput">
+ <class>MedianFilterDialog</class>
+ <widget class="QDialog" name="MedianFilterDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>250</y>
-     <width>164</width>
+     <x>30</x>
+     <y>240</y>
+     <width>341</width>
      <height>32</height>
     </rect>
    </property>
@@ -29,34 +29,21 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>39</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Kernel</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="kernelEdit">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>60</y>
-     <width>311</width>
-     <height>131</height>
+     <x>130</x>
+     <y>80</y>
+     <width>113</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QRadioButton" name="rBtnRGB">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>220</y>
+     <x>70</x>
+     <y>170</y>
      <width>100</width>
      <height>20</height>
     </rect>
@@ -71,17 +58,14 @@
   <widget class="QRadioButton" name="rBtnGray">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>220</y>
+     <x>210</x>
+     <y>170</y>
      <width>100</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Gray</string>
-   </property>
-   <property name="checked">
-    <bool>false</bool>
    </property>
   </widget>
  </widget>
@@ -90,7 +74,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>SpacialFilterCernelInput</receiver>
+   <receiver>MedianFilterDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -106,7 +90,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>SpacialFilterCernelInput</receiver>
+   <receiver>MedianFilterDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
