--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,6 +76,19 @@
      <string>重置</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btn_FFT">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>450</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>FFT</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
