--- a/frequencyfilterdialog.ui
+++ b/frequencyfilterdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BilateralFilterDialog</class>
- <widget class="QDialog" name="BilateralFilterDialog">
+ <class>FrequencyFilterDialog</class>
+ <widget class="QDialog" name="FrequencyFilterDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -29,72 +29,24 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="sizeInputEdit">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>60</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>11</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="sigmaInputEdit">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>110</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>5</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="anothersigmaInputEdit">
-   <property name="geometry">
-    <rect>
-     <x>150</x>
-     <y>160</y>
-     <width>113</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>5</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>60</y>
+     <x>110</x>
+     <y>100</y>
      <width>60</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>size</string>
+    <string>D</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>110</y>
+     <x>100</x>
+     <y>140</y>
      <width>60</width>
      <height>16</height>
     </rect>
@@ -103,17 +55,24 @@
     <string>sigma</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLineEdit" name="editD">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>160</y>
-     <width>91</width>
-     <height>16</height>
+     <x>180</x>
+     <y>100</y>
+     <width>113</width>
+     <height>21</height>
     </rect>
    </property>
-   <property name="text">
-    <string>anothersigma</string>
+  </widget>
+  <widget class="QLineEdit" name="editSigma">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>140</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
    </property>
   </widget>
  </widget>
@@ -122,7 +81,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>BilateralFilterDialog</receiver>
+   <receiver>FrequencyFilterDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -138,7 +97,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>BilateralFilterDialog</receiver>
+   <receiver>FrequencyFilterDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
